--- a/renderer/index.html
+++ b/renderer/index.html
@@ -218,6 +218,10 @@
                   </div>
                 </div>
               </div>
+              <div class="column col-4">
+                <label class="form-label" for="osvita-base-date">Вихідні дані станом на дату:</label>
+                <input class="form-input" type="date" id="osvita-base-date" placeholder="Вкажіть дату на яку розраховано стаж">
+              </div>
             </div>
           </div>
 
