Add filters by organization and department

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -219,7 +219,9 @@
                 <input class="form-input" type="date" id="osvita-base-date" placeholder="Вкажіть дату на яку розраховано стаж">
               </div>
             </div>
+
             <br />
+
             <div class="columns">
               <div class="column col-8">
                 <label class="form-label" for="osvita-db-path">Каталог бази даних</label>
@@ -232,9 +234,16 @@
                   </div>
                 </div>
               </div>
-              <div class="column col-4">
+              <div class="column col-2">
+                <label class="form-label" for="osvita-organization" id="osvita-organization-label">Код організації</label>
+                <input class="form-input" type="text" id="osvita-organization">
+              </div>
+              <div class="column col-2">
+                <label class="form-label" for="osvita-department" id="osvita-department-label">Код підрозділу</label>
+                <input class="form-input" type="text" id="osvita-department">
               </div>
             </div>
+
           </div>
 
           <!-- APK params panel -->
