--- a/renderer/index.html
+++ b/renderer/index.html
@@ -311,17 +311,21 @@
             </div>
             <br />
             <div class="columns">
-              <div class="column col-4">
+              <div class="column col-3">
                 <label class="form-label" for="a5-database">База даних</label>
                 <input class="form-input" type="text" id="a5-database" placeholder="test">
               </div>
-              <div class="column col-4">
+              <div class="column col-3">
                 <label class="form-label" for="a5-login">Логін</label>
                 <input class="form-input" type="text" id="a5-login" placeholder="admin">
               </div>
-              <div class="column col-4">
+              <div class="column col-3">
                 <label class="form-label" for="a5-password">Пароль</label>
                 <input class="form-input" type="password" id="a5-password" placeholder="admin">
+              </div>
+              <div class="column col-3">
+                <label class="form-label" for="a5-org-code">Код організації</label>
+                <input class="form-input" type="text" id="a5-org-code">
               </div>
             </div>
             <!-- <br /> -->
