--- a/renderer/index.html
+++ b/renderer/index.html
@@ -325,7 +325,7 @@
               </div>
               <div class="column col-3">
                 <label class="form-label" for="a5-org-code">Код організації</label>
-                <input class="form-input" type="text" id="a5-org-code">
+                <input class="form-input" type="text" id="a5-org-code" placeholder="або ЄДРПО">
               </div>
             </div>
             <!-- <br /> -->
