--- a/renderer/index.html
+++ b/renderer/index.html
@@ -371,8 +371,8 @@
                 <input class="form-input" type="password" id="bk-password">
               </div>
               <div class="column col-4">
-                <label class="form-label" for="bk-org-code">Організація</label>
-                <input class="form-input" type="text" id="bk-org-code" placeholder="Не обов'язково">
+                <label class="form-label" for="bk-org-code">ЄДРПОУ організації</label>
+                <input class="form-input" type="text" id="bk-org-code" placeholder="Якщо не визначено, то всі">
               </div>
               <!-- <div class="column col-3">
                 <label class="form-label" for="code-dep">Код підрозділу</label>
