--- a/renderer/index.html
+++ b/renderer/index.html
@@ -23,7 +23,7 @@
         <a href="#" class="btn btn-link menu-item" id="selectOsvita">Освіта</a>
         <a href="#" class="btn btn-link menu-item" id="selectAPK">АПК</a>
         <a href="#" class="btn btn-link menu-item" id="selectA5">А5</a>
-        <a href="#" class="btn btn-link menu-item" id="selectBossk">БОСС Кадровик</a>
+        <a href="#" class="btn btn-link menu-item" id="selectBossk">БОСС-Кадровик</a>
       </section>
       <section class="navbar-section">
         <a href="#" class="btn btn-link black-white" id="goHomeA5">
@@ -114,7 +114,7 @@
           </p>
 
           <a href="#" class="btn btn-link system-caption" id="captionBossk">
-            <h4 class="mt-3 mb-1 bossk">БОСС Кадровик</h4>
+            <h4 class="mt-3 mb-1 bossk">БОСС-Кадровик</h4>
           </a>
           <p>
             Експорт виконується безпосередньо із бази даних<br />
