--- a/renderer/index.html
+++ b/renderer/index.html
@@ -59,15 +59,18 @@
               даних</a>
           </p>
 
-          <a href="#" class="btn btn-link system-caption" id="captionAfina">
-            <h4 class="mt-3 mb-1 afina">Афіна</h4>
-          </a>
-          <p>
-            Експорт виконується із файлів бази даних<br />
-            Для виконання експорту необхідно <a href="#" id="homeSelectAfina">вказати каталог у якому розміщені файли
-              бази даних</a>
-          </p>
+          <div id="partAfina">
+            <a href="#" class="btn btn-link system-caption" id="captionAfina">
+              <h4 class="mt-3 mb-1 afina">Афіна</h4>
+            </a>
+            <p>
+              Експорт виконується із файлів бази даних<br />
+              Для виконання експорту необхідно <a href="#" id="homeSelectAfina">вказати каталог у якому розміщені файли
+                бази даних</a>
+            </p>
+        </div>
 
+        <div id="partParus">
           <a href="#" class="btn btn-link system-caption" id="captionParus">
             <h4 class="mt-3 mb-1 parus">Парус</h4>
           </a>
@@ -76,6 +79,7 @@
             Для виконання експорту необхідно <a href="#" id="homeSelectParus">вказати каталог у якому розміщені файли
               бази даних</a>
           </p>
+        </div>
 
           <a href="#" class="btn btn-link system-caption" id="caption1C">
             <h4 class="mt-3 mb-1 C7">1С</h4>
