--- a/renderer/index.html
+++ b/renderer/index.html
@@ -14,7 +14,7 @@
     <header class="navbar">
       <section class="navbar-section">
         <a href=" #" class="btn btn-link mr-2 brand" id="selectHome">
-        Мульті-Експорт
+          Мульті-Експорт
         </a>
         <a href="#" class="btn btn-link menu-item" id="selectISPro">ІС-про</a>
         <a href="#" class="btn btn-link menu-item" id="selectAfina">Афіна</a>
@@ -68,27 +68,29 @@
               Для виконання експорту необхідно <a href="#" id="homeSelectAfina">вказати каталог у якому розміщені файли
                 бази даних</a>
             </p>
-        </div>
+          </div>
 
-        <div id="partParus">
-          <a href="#" class="btn btn-link system-caption" id="captionParus">
-            <h4 class="mt-3 mb-1 parus">Парус</h4>
-          </a>
-          <p>
-            Експорт виконується із файлів бази даних<br />
-            Для виконання експорту необхідно <a href="#" id="homeSelectParus">вказати каталог у якому розміщені файли
-              бази даних</a>
-          </p>
-        </div>
+          <div id="partParus">
+            <a href="#" class="btn btn-link system-caption" id="captionParus">
+              <h4 class="mt-3 mb-1 parus">Парус</h4>
+            </a>
+            <p>
+              Експорт виконується із файлів бази даних<br />
+              Для виконання експорту необхідно <a href="#" id="homeSelectParus">вказати каталог у якому розміщені файли
+                бази даних</a>
+            </p>
+          </div>
 
-          <a href="#" class="btn btn-link system-caption" id="caption1C">
-            <h4 class="mt-3 mb-1 C7">1С</h4>
-          </a>
-          <p>
-            Експорт виконується із файлів, у які вивантажено довідники і облікові відомості<br />
-            Для виконання експорту необхідно <a href="#" id="homeSelect1C">вказати каталог у якому розміщені вихідні
-              файли</a>
-          </p>
+          <div id="part1C">
+            <a href="#" class="btn btn-link system-caption" id="caption1C">
+              <h4 class="mt-3 mb-1 C7">1С</h4>
+            </a>
+            <p>
+              Експорт виконується із файлів, у які вивантажено довідники і облікові відомості<br />
+              Для виконання експорту необхідно <a href="#" id="homeSelect1C">вказати каталог у якому розміщені вихідні
+                файли</a>
+            </p>
+          </div>
 
           <a href="#" class="btn btn-link system-caption" id="captionOsvita">
             <h4 class="mt-3 mb-1 osvita">Освіта</h4>
@@ -137,7 +139,7 @@
           <div id="ispro-panel">
             <div class="columns">
               <div class="column col-4">
-                <label class="form-label" for="server-name">Сервер бази даних</label>
+                <label class="form-label" for="server-name">Сервер</label>
                 <input class="form-input" type="text" id="server-name" placeholder="localhost:1433">
               </div>
               <div class="column col-4">
@@ -231,26 +233,27 @@
 
           <div id="osvita-panel">
             <div class="columns">
-              <div class="column col-8">
+              <div class="column col-6">
                 <label class="form-label" for="osvita-version">Версія програми:</label>
-                <select class="form-select" id="osvita-version" >
+                <select class="form-select" id="osvita-version">
                   <option>Без тарифікації (для департаменту)</option>
                   <option>З тарифікацією (для організацій)</option>
                 </select>
               </div>
-              <div class="column col-4">
+              <div class="column col-6">
                 <label class="form-label" for="osvita-base-date">Вихідні дані станом на дату:</label>
-                <input class="form-input" type="date" id="osvita-base-date" placeholder="Вкажіть дату на яку розраховано стаж">
+                <input class="form-input" type="date" id="osvita-base-date"
+                  placeholder="Вкажіть дату на яку розраховано стаж">
               </div>
             </div>
 
             <br />
 
             <div class="columns">
-              <div class="column col-8">
+              <div class="column col-6">
                 <label class="form-label" for="osvita-db-path">Каталог бази даних</label>
                 <div class="columns">
-                  <div class="column col-11">
+                  <div class="column col-10">
                     <input class="form-input" type="text" id="osvita-db-path" placeholder="C:\Osvita\DB">
                   </div>
                   <div class="column col-1">
@@ -258,9 +261,13 @@
                   </div>
                 </div>
               </div>
-              <div class="column col-2">
-                <label class="form-label" for="osvita-organization" id="osvita-organization-label">Код організації</label>
-                <input class="form-input" type="text" id="osvita-organization">
+
+
+              <div class="column col-4">
+                <label class="form-label" for="osvita-organization" id="osvita-organization-label">ЄДРПОУ
+                  організації</label>
+                <input class="form-input" type="text" id="osvita-organization"
+                  placeholder="Не визначено - всі організації">
               </div>
               <div class="column col-2">
                 <label class="form-label" for="osvita-department" id="osvita-department-label">Код підрозділу</label>
@@ -275,7 +282,7 @@
           <div id="apk-panel">
             <div class="columns">
               <div class="column col-4">
-                <label class="form-label" for="apk-host">Сервер бази даних</label>
+                <label class="form-label" for="apk-host">Сервер</label>
                 <input class="form-input" type="text" id="apk-host" placeholder="localhost">
               </div>
               <div class="column col-4">
@@ -309,37 +316,38 @@
             <div class="columns">
               <div class="column col-3">
                 <label class="form-label" for="a5-db-type">СУБД:</label>
-                <select class="form-select" id="a5-db-type" >
+                <select class="form-select" id="a5-db-type">
                   <option>PostgreSQL</option>
                   <option>SQL Server</option>
                 </select>
               </div>
-              <div class="column col-6">
-                <label class="form-label" for="a5-host">Сервер бази даних</label>
+              <div class="column col-3">
+                <label class="form-label" for="a5-host">Сервер</label>
                 <input class="form-input" type="text" id="a5-host" placeholder="localhost">
               </div>
               <div class="column col-3">
                 <label class="form-label" for="a5-port">Порт</label>
                 <input class="form-input" type="text" id="a5-port" placeholder="5432">
               </div>
-            </div>
-            <br />
-            <div class="columns">
               <div class="column col-3">
                 <label class="form-label" for="a5-database">База даних</label>
                 <input class="form-input" type="text" id="a5-database" placeholder="test">
               </div>
-              <div class="column col-3">
+            </div>
+            <br />
+            <div class="columns">
+
+              <div class="column col-4">
                 <label class="form-label" for="a5-login">Логін</label>
                 <input class="form-input" type="text" id="a5-login" placeholder="admin">
               </div>
-              <div class="column col-3">
+              <div class="column col-4">
                 <label class="form-label" for="a5-password">Пароль</label>
                 <input class="form-input" type="password" id="a5-password" placeholder="admin">
               </div>
-              <div class="column col-3">
-                <label class="form-label" for="a5-org-code">Код організації</label>
-                <input class="form-input" type="text" id="a5-org-code" placeholder="або ЄДРПО">
+              <div class="column col-4">
+                <label class="form-label" for="a5-org-code">ЄДРПОУ організації</label>
+                <input class="form-input" type="text" id="a5-org-code" placeholder="Не визначено - всі організації">
               </div>
             </div>
             <!-- <br /> -->
@@ -356,11 +364,11 @@
                 <input class="form-input" type="text" id="bk-domain" placeholder="ibk-test">
               </div>
               <div class="column col-4">
-                <label class="form-label" for="bk-server-name">Сервер бази даних</label>
+                <label class="form-label" for="bk-server-name">Сервер</label>
                 <input class="form-input" type="text" id="bk-server-name" placeholder="hr">
               </div>
               <div class="column col-4">
-                <label class="form-label" for="bk-schema-name">Схема бази даних</label>
+                <label class="form-label" for="bk-schema-name">База даних</label>
                 <input class="form-input" type="text" id="bk-schema-name" placeholder="TEST">
               </div>
             </div>
@@ -376,7 +384,7 @@
               </div>
               <div class="column col-4">
                 <label class="form-label" for="bk-org-code">ЄДРПОУ організації</label>
-                <input class="form-input" type="text" id="bk-org-code" placeholder="Якщо не визначено, то всі">
+                <input class="form-input" type="text" id="bk-org-code" placeholder="Не визначено - всі організації">
               </div>
               <!-- <div class="column col-3">
                 <label class="form-label" for="code-dep">Код підрозділу</label>
