--- a/renderer/index.html
+++ b/renderer/index.html
@@ -359,15 +359,19 @@
 
           <div id="bossk-panel">
             <div class="columns">
-              <div class="column col-4">
+              <div class="column col-3">
                 <label class="form-label" for="bk-domain">Домен</label>
                 <input class="form-input" type="text" id="bk-domain" placeholder="ibk-test">
               </div>
-              <div class="column col-4">
+              <div class="column col-3">
                 <label class="form-label" for="bk-server-name">Сервер</label>
                 <input class="form-input" type="text" id="bk-server-name" placeholder="hr">
               </div>
-              <div class="column col-4">
+              <div class="column col-3">
+                <label class="form-label" for="bk-port">Порт</label>
+                <input class="form-input" type="text" id="bk-port" placeholder="1433">
+              </div>
+              <div class="column col-3">
                 <label class="form-label" for="bk-schema-name">База даних</label>
                 <input class="form-input" type="text" id="bk-schema-name" placeholder="TEST">
               </div>
