--- a/renderer/index.html
+++ b/renderer/index.html
@@ -361,11 +361,11 @@
             <div class="columns">
               <div class="column col-3">
                 <label class="form-label" for="bk-domain">Домен</label>
-                <input class="form-input" type="text" id="bk-domain" placeholder="ibk-test">
+                <input class="form-input" type="text" id="bk-domain" placeholder="">
               </div>
               <div class="column col-3">
                 <label class="form-label" for="bk-server-name">Сервер</label>
-                <input class="form-input" type="text" id="bk-server-name" placeholder="hr">
+                <input class="form-input" type="text" id="bk-server-name" placeholder="ibk-test\hr">
               </div>
               <div class="column col-3">
                 <label class="form-label" for="bk-port">Порт</label>
