chore: connection fault

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -324,7 +324,7 @@
               <div class="column col-3">
                 <label class="form-label" for="a5-db-type">СУБД:</label>
                 <select class="form-select" id="a5-db-type">
-                  <option>PostgreSQL</option>
+                  <option>Postgres</option>
                   <option>SQL Server</option>
                 </select>
               </div>
